# sweepminer

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: build.yaml
assets/: sweepminer.rc
include/SweepMiner/: decoder.hpp  framework.hpp  resource.hpp
src/: OldCell.cpp  OldCell.hpp  OldGame.cpp  OldGame.hpp  art.hpp  box.cpp  box.hpp  button.cpp  button.hpp  cell.cpp  cell.hpp  cell_grid.cpp  cell_grid.hpp  color.hpp  component.cpp  component.hpp  constants.hpp  context.cpp  context.hpp  counter.cpp  counter.hpp  debug_menu.cpp  debug_menu.hpp  events.hpp  font.hpp  game.cpp  game.h  game.hpp  image.cpp  image.h  image.hpp  logger.hpp  logging.hpp  mac_menu.mm  main.cpp  menu_bar.cpp  menu_bar.hpp  menu_bar_imgui.cpp  menu_bar_mac.mm  menu_bar_win.cpp  (+22 more)
src/include/: constants.h  decoder.h  framework.h  handles.h  logger.h  resource.h  targetver.h  util.h
src/old/: cell.cpp  cell.hpp  constants.hpp  game.cpp  main.cpp  menu_bar.cpp  mouse.cpp  resource_context.hpp  resource_registry.hpp  textures.hpp  timer.cpp
src/resources/: SweepMiner.exe.manifest  sweepminer.rc
